Xchart dependency added.

--- a/pom.xml
+++ b/pom.xml
@@ -71,6 +71,11 @@
 		    <artifactId>lombok</artifactId>
 		    <scope>provided</scope>
 		</dependency>
+		<dependency>
+		    <groupId>org.knowm.xchart</groupId>
+		    <artifactId>xchart</artifactId>
+		    <version>3.5.2</version>
+		</dependency>
     </dependencies>
     <build>
         <plugins>
